--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -110,7 +110,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 90vh;
+    height: 50vh;
     position: absolute;
     top: 80px;
     left: -100%;
@@ -118,6 +118,10 @@
     transition: all 0.5s ease;
     background: #fff;
     z-index: 2;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
+    overflow-y: auto;
   }
 
   .nav-menu.active {
@@ -130,14 +134,15 @@
   .nav-item {
     height: auto;
     width: 100%;
-    padding: 1.5rem 0;
+    padding: 1rem 0;
   }
 
   .nav-links {
     text-align: center;
-    padding: 1rem;
+    padding: 0.8rem;
     width: 100%;
     display: table;
+    font-size: 1.1rem;
   }
 
   .nav-links:hover {
@@ -209,5 +214,6 @@ body.dark-theme .nav-menu {
 @media screen and (max-width: 960px) {
   body.dark-theme .nav-menu {
     background-color: #1e1e1e;
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3);
   }
 }
